Div overflow fixed

--- a/static/css/sb-admin.css
+++ b/static/css/sb-admin.css
@@ -137,6 +137,7 @@
         position: absolute;
         width: 250px;
         margin-top: 51px;
+        height: 2048px;
     }
 
     .navbar-top-links .dropdown-messages,
